--- a/style.css
+++ b/style.css
@@ -1,3 +1,59 @@
+body {
+    background-color: #333;
+}
+
+h1 {
+    font-size: 60px;
+}
+
 #book-form {
     display: none;
+}
+
+.container {
+    background-color: #FFF;
+    width: 500px;
+    padding: 80px 400px;
+    margin: 0 auto;
+    border-radius: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#new-book {
+    border-radius: 15px;
+    background-color: brown;
+    padding: 8px 15px;
+    font-weight: bold;
+    color:blanchedalmond;
+    border: none;
+    font-size: 20px;
+    margin-bottom: 30px;
+}
+
+#book-form {
+    padding:30px;
+    border: brown 3px solid;
+    border-radius: 15px;
+    width: 200px;
+    margin-bottom: 30px;
+}
+
+#book-form > div {
+    padding:10px
+}
+
+#book-form #pages {
+    width: 40px;
+}
+
+input[type='button'] {
+    border-radius: 15px;
+    background-color: brown;
+    padding: 4px 7px;
+    font-weight: bold;
+    color:blanchedalmond;
+    border: none;
+    font-size: 14px;
 }
